Designed index page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Bootstrap CSS -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    Bootstrap Examples
+    <nav>Home</nav>
 </head>
 <body>
-    
+    <main>
+        <div class="containter">
+            <div class="row">
+                <div class="col-md-4"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae sapien pellentesque habitant morbi tristique senectus et netus. Elementum tempus egestas sed sed risus pretium quam vulputate dignissim. Pellentesque id nibh tortor id aliquet lectus proin. Molestie a iaculis at erat pellentesque adipiscing. Est pellentesque elit ullamcorper dignissim cras tincidunt. Amet aliquam id diam maecenas. Vestibulum mattis ullamcorper velit sed. Aliquet eget sit amet tellus cras adipiscing. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Accumsan lacus vel facilisis volutpat est. Et pharetra pharetra massa massa ultricies mi. Curabitur gravida arcu ac tortor dignissim convallis. Lectus urna duis convallis convallis tellus id interdum velit.</p></div>
+                <div class="col-md-4"><p>Amet justo donec enim diam vulputate. Lectus quam id leo in vitae. Pharetra convallis posuere morbi leo urna molestie at elementum. Velit laoreet id donec ultrices tincidunt arcu non sodales neque. Natoque penatibus et magnis dis. Felis bibendum ut tristique et egestas quis ipsum suspendisse ultrices. Natoque penatibus et magnis dis parturient montes nascetur. Ut venenatis tellus in metus vulputate eu. A cras semper auctor neque vitae. Nulla aliquet porttitor lacus luctus accumsan tortor. Lectus proin nibh nisl condimentum id venenatis a. A iaculis at erat pellentesque adipiscing commodo elit. Massa sed elementum tempus egestas sed. Interdum velit euismod in pellentesque massa placerat duis ultricies. Ac feugiat sed lectus vestibulum mattis ullamcorper velit.</p></div>
+                <div class="col-md-4"><p>Elit sed vulputate mi sit amet mauris. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. Turpis nunc eget lorem dolor sed viverra ipsum. Bibendum ut tristique et egestas quis. Arcu dui vivamus arcu felis bibendum. Feugiat in fermentum posuere urna nec tincidunt. Quam vulputate dignissim suspendisse in est ante in nibh. Pulvinar proin gravida hendrerit lectus a. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Morbi leo urna molestie at elementum eu facilisis sed. Arcu dictum varius duis at consectetur lorem donec. Platea dictumst quisque sagittis purus sit amet volutpat consequat. Sed elementum tempus egestas sed. At consectetur lorem donec massa sapien faucibus et. Feugiat in ante metus dictum at. Hendrerit dolor magna eget est lorem. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras fermentum.</p></div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
