--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     Bootstrap Examples
     <br>
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="slideshow.html">Carousel</a>
+    </nav>
 </head>
 <body>
     <main>
