--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="slideshow.html">Carousel</a>
+        <a href="cards.html">Cards</a>
     </nav>
 </head>
 <body>
